gen/org/hedhman/pony/idea/generated/parsing/PonyParser.java
/* Copyright Niclas Hedhman, 2020. All rights reserved. Licensed under the Apache License, Version 2.0 (the "License"). See LICENSE.txt*/
package org.hedhman.pony.idea.generated.parsing;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.hedhman.pony.idea.generated.parsing.PonyTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class PonyParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return module(b, l + 1);
  }

  /* ********************************************************** */
  // annotations (exprseq | jump)
  public static boolean annotatedrawseq(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotatedrawseq")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATEDRAWSEQ, "<annotatedrawseq>");
    r = annotations(b, l + 1);
    r = r && annotatedrawseq_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // exprseq | jump
  private static boolean annotatedrawseq_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotatedrawseq_1")) return false;
    boolean r;
    r = exprseq(b, l + 1);
    if (!r) r = jump(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // (BACKSLASH ID (COMMA ID)* BACKSLASH)?
  public static boolean annotations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotations")) return false;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATIONS, "<annotations>");
    annotations_0(b, l + 1);
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // BACKSLASH ID (COMMA ID)* BACKSLASH
  private static boolean annotations_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotations_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, BACKSLASH, ID);
    r = r && annotations_0_2(b, l + 1);
    r = r && consumeToken(b, BACKSLASH);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA ID)*
  private static boolean annotations_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotations_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotations_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotations_0_2", c)) break;
    }
    return true;
  }

  // COMMA ID
  private static boolean annotations_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotations_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COMMA, ID);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // AS type_
  public static boolean as_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "as_op")) return false;
    if (!nextTokenIs(b, AS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AS);
    r = r && type_(b, l + 1);
    exit_section_(b, m, AS_OP, r);
    return r;
  }

  /* ********************************************************** */
  // infix (ASSIGN assignment)?
  public static boolean assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT, "<assignment>");
    r = infix(b, l + 1);
    r = r && assignment_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (ASSIGN assignment)?
  private static boolean assignment_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_1")) return false;
    assignment_1_0(b, l + 1);
    return true;
  }

  // ASSIGN assignment
  private static boolean assignment_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASSIGN);
    r = r && assignment(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ID
  //   | THIS
  //   | literal
  //   | tuple_decl
  //   | (LSQUARE | LSQUARE_NEW) (AS type_ TYPE_OP)? rawseq? RSQUARE
  //   | object_decl
  //   | lambda_decl
  //   | ffi_decl typeargs? (LPAREN | LPAREN_NEW) positional? named? RPAREN THROWS?
  //   | LOC
  public static boolean atom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOM, "<atom>");
    r = consumeToken(b, ID);
    if (!r) r = consumeToken(b, THIS);
    if (!r) r = literal(b, l + 1);
    if (!r) r = tuple_decl(b, l + 1);
    if (!r) r = atom_4(b, l + 1);
    if (!r) r = object_decl(b, l + 1);
    if (!r) r = lambda_decl(b, l + 1);
    if (!r) r = atom_7(b, l + 1);
    if (!r) r = consumeToken(b, LOC);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (LSQUARE | LSQUARE_NEW) (AS type_ TYPE_OP)? rawseq? RSQUARE
  private static boolean atom_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = atom_4_0(b, l + 1);
    r = r && atom_4_1(b, l + 1);
    r = r && atom_4_2(b, l + 1);
    r = r && consumeToken(b, RSQUARE);
    exit_section_(b, m, null, r);
    return r;
  }

  // LSQUARE | LSQUARE_NEW
  private static boolean atom_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4_0")) return false;
    boolean r;
    r = consumeToken(b, LSQUARE);
    if (!r) r = consumeToken(b, LSQUARE_NEW);
    return r;
  }

  // (AS type_ TYPE_OP)?
  private static boolean atom_4_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4_1")) return false;
    atom_4_1_0(b, l + 1);
    return true;
  }

  // AS type_ TYPE_OP
  private static boolean atom_4_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AS);
    r = r && type_(b, l + 1);
    r = r && consumeToken(b, TYPE_OP);
    exit_section_(b, m, null, r);
    return r;
  }

  // rawseq?
  private static boolean atom_4_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_4_2")) return false;
    rawseq(b, l + 1);
    return true;
  }

  // ffi_decl typeargs? (LPAREN | LPAREN_NEW) positional? named? RPAREN THROWS?
  private static boolean atom_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_7")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ffi_decl(b, l + 1);
    r = r && atom_7_1(b, l + 1);
    r = r && atom_7_2(b, l + 1);
    r = r && atom_7_3(b, l + 1);
    r = r && atom_7_4(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && atom_7_6(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // typeargs?
  private static boolean atom_7_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_7_1")) return false;
    typeargs(b, l + 1);
    return true;
  }

  // LPAREN | LPAREN_NEW
  private static boolean atom_7_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_7_2")) return false;
    boolean r;
    r = consumeToken(b, LPAREN);
    if (!r) r = consumeToken(b, LPAREN_NEW);
    return r;
  }

  // positional?
  private static boolean atom_7_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_7_3")) return false;
    positional(b, l + 1);
    return true;
  }

  // named?
  private static boolean atom_7_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_7_4")) return false;
    named(b, l + 1);
    return true;
  }

  // THROWS?
  private static boolean atom_7_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_7_6")) return false;
    consumeToken(b, THROWS);
    return true;
  }

  /* ********************************************************** */
  // THIS
  //   | cap
  //   | (LPAREN | LPAREN_NEW) infixtype tupletype? RPAREN
  //   | nominal
  //   | lambdatype
  //   | barelambdatype
  public static boolean atomtype(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomtype")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOMTYPE, "<atomtype>");
    r = consumeToken(b, THIS);
    if (!r) r = cap(b, l + 1);
    if (!r) r = atomtype_2(b, l + 1);
    if (!r) r = nominal(b, l + 1);
    if (!r) r = lambdatype(b, l + 1);
    if (!r) r = barelambdatype(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (LPAREN | LPAREN_NEW) infixtype tupletype? RPAREN
  private static boolean atomtype_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomtype_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = atomtype_2_0(b, l + 1);
    r = r && infixtype(b, l + 1);
    r = r && atomtype_2_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // LPAREN | LPAREN_NEW
  private static boolean atomtype_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomtype_2_0")) return false;
    boolean r;
    r = consumeToken(b, LPAREN);
    if (!r) r = consumeToken(b, LPAREN_NEW);
    return r;
  }

  // tupletype?
  private static boolean atomtype_2_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atomtype_2_2")) return false;
    tupletype(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ATLBRACE cap? ID? typeparams? (LPAREN | LPAREN_NEW) (type_ (COMMA type_)*)? RPAREN (TYPE_OP type_)? THROWS? RBRACE (cap | gencap)? (HAT | BANG)?
  public static boolean barelambdatype(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype")) return false;
    if (!nextTokenIs(b, ATLBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ATLBRACE);
    r = r && barelambdatype_1(b, l + 1);
    r = r && barelambdatype_2(b, l + 1);
    r = r && barelambdatype_3(b, l + 1);
    r = r && barelambdatype_4(b, l + 1);
    r = r && barelambdatype_5(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && barelambdatype_7(b, l + 1);
    r = r && barelambdatype_8(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    r = r && barelambdatype_10(b, l + 1);
    r = r && barelambdatype_11(b, l + 1);
    exit_section_(b, m, BARELAMBDATYPE, r);
    return r;
  }

  // cap?
  private static boolean barelambdatype_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_1")) return false;
    cap(b, l + 1);
    return true;
  }

  // ID?
  private static boolean barelambdatype_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_2")) return false;
    consumeToken(b, ID);
    return true;
  }

  // typeparams?
  private static boolean barelambdatype_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_3")) return false;
    typeparams(b, l + 1);
    return true;
  }

  // LPAREN | LPAREN_NEW
  private static boolean barelambdatype_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_4")) return false;
    boolean r;
    r = consumeToken(b, LPAREN);
    if (!r) r = consumeToken(b, LPAREN_NEW);
    return r;
  }

  // (type_ (COMMA type_)*)?
  private static boolean barelambdatype_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_5")) return false;
    barelambdatype_5_0(b, l + 1);
    return true;
  }

  // type_ (COMMA type_)*
  private static boolean barelambdatype_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = type_(b, l + 1);
    r = r && barelambdatype_5_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA type_)*
  private static boolean barelambdatype_5_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_5_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!barelambdatype_5_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "barelambdatype_5_0_1", c)) break;
    }
    return true;
  }

  // COMMA type_
  private static boolean barelambdatype_5_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_5_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && type_(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (TYPE_OP type_)?
  private static boolean barelambdatype_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_7")) return false;
    barelambdatype_7_0(b, l + 1);
    return true;
  }

  // TYPE_OP type_
  private static boolean barelambdatype_7_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_7_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TYPE_OP);
    r = r && type_(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // THROWS?
  private static boolean barelambdatype_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_8")) return false;
    consumeToken(b, THROWS);
    return true;
  }

  // (cap | gencap)?
  private static boolean barelambdatype_10(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_10")) return false;
    barelambdatype_10_0(b, l + 1);
    return true;
  }

  // cap | gencap
  private static boolean barelambdatype_10_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_10_0")) return false;
    boolean r;
    r = cap(b, l + 1);
    if (!r) r = gencap(b, l + 1);
    return r;
  }

  // (HAT | BANG)?
  private static boolean barelambdatype_11(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_11")) return false;
    barelambdatype_11_0(b, l + 1);
    return true;
  }

  // HAT | BANG
  private static boolean barelambdatype_11_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "barelambdatype_11_0")) return false;
    boolean r;
    r = consumeToken(b, HAT);
    if (!r) r = consumeToken(b, BANG);
    return r;
  }

  /* ********************************************************** */
  // (AND | OR | XOR
  //        | PLUS_OP | MINUS_OP | MULT_OP | DIV_OP | REMAINDER | MODULO
  //        | PLUS_UNSAFE | MINUS_TILDE | MULT_UNSAFE | DIV_UNSAFE | REMAINDER_UNSAFE | MODULO_UNSAFE
  //        | LSHIFT | RSHIFT | LSHIFT_UNSAFE | RSHIFT_UNSAFE
  //        | EQUALITY | NON_EQUALITY | LT_OP | LTE_OP | GT_OP | GTE_OP
  //        | EQUALITY_UNSAFE | NON_EQUALITY_UNSAFE | LT_UNSAFE | LTE_UNSAFE | GT_UNSAFE | GTE_UNSAFE) THROWS? term
  public static boolean binop(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binop")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINOP, "<binop>");
    r = binop_0(b, l + 1);
    r = r && binop_1(b, l + 1);
    r = r && term(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
